{{$NEXT}}
          [Remedies]
          - Implicit sections properly added
          
          [Enchantments]
          - Multiple wiki language support (textile, markdown, creole)

          [View]
          - A little style added for forms (via jQuery UI)
          - recent area style refined

0.08      2011-03-13 13:56:08 America/Denver
          [Tests]
          - @TestingMania passes now except Kwalitee. use strict fails
            but we have something better in place already - strictures.
	  - Added Mojito::Middleware::TestDB to set the database as mojito_test
            when testing with RELEASE_TESTING set to true. 
          - Added more tests to t/app.t usng the mojito_test db. create, read, update, delete

          [Remedies]
          - Fix conf finding logic so mojito_local.conf is not required.
          - Check for no recent docs before attempting to display recent docs list.

          [Refactor]
          - Template.pm attributes and builders added and moved into roles.
          - Broke out Doc and Link Models from CRUD.

0.07      2011-03-09 23:03:56 America/Denver
          [Tests]
          - Plack::Test test suite for release mode.
          
          [Misc]
          - Explicitly state that Perl 5.10.1 is required.

0.06      2011-03-07 23:02:08 America/Denver
          [Enchantments]
          - mojito.conf with mojito_local.conf and $ENV{MOJITO_CONFIG} override option.
          - Expose /public/feed and /public/page views 
          

0.05      2011-03-07 08:26:26 America/Denver
          [Enchantments]
          - Digest Authentication required on all non /public URLs
          - implemented script/add_user.pl to add users to the DB for page access.
          - enabled setting both the db and collection in the DB role.
            Now we can get to a 'bench' database and a 'users' collection.
          
          [Refactor]
          - Middleware for Mojito object
          - Controller golfing