@@ -60,6 +60,13 @@ post '/page/:id/edit' => sub {
     $_[0]->redirect_to($_[0]->mojito->update_page($params));
 };
 
+get '/search/:word' => sub {
+    my ($self) = (shift);
+    my $params;
+    $params->{word} = $self->param('word');
+    $self->render( text => $self->mojito->search($params) );
+};
+
 get '/page/:id/delete' => sub {
     $_[0]->redirect_to( $_[0]->mojito->delete_page({ id => $_[0]->param('id') }) );
 };
